java/helidon-server/src/main/microk8s/ingress-traefik.yaml
#
# Copyright (c) 2020, 2021, Oracle and/or its affiliates.
#
# Licensed under the Universal Permissive License v 1.0 as shown at
# http://oss.oracle.com/licenses/upl.
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /   ## figure out how to rewrite URLs with Traefik
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: todo-app.microk8s
    http:
      paths:
      - path: /jaeger
        pathType: Prefix
        backend:
          serviceName: jaeger-query
          servicePort: 16686
      - path: /
        pathType: Prefix
        backend:
          serviceName: todo-list-http
          servicePort: 7001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: h2c
spec:
  rules:
  - host: todo-grpc.microk8s
    http:
      paths:
      - backend:
          serviceName: todo-list-grpc
          servicePort: 1408
